--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   injectable: ^1.5.3
   injectable_generator: ^1.5.3
   easy_localization: ^3.0.0
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.6
+  cloud_firestore: ^3.1.7
 
 dev_dependencies:
   flutter_test:
