--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,13 @@ dependencies:
   injectable: ^1.5.3
   injectable_generator: ^1.5.3
   easy_localization: ^3.0.0
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.6
+  cloud_firestore: ^3.1.7
+  equatable: ^2.0.3
+  google_sign_in: ^5.2.3
+  dio: ^4.0.4
+  json_serializable: ^6.1.4
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +38,6 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/translations/
