--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   google_sign_in: ^5.2.3
   dio: ^4.0.4
   json_serializable: ^6.1.4
+  flutter_svg: ^1.0.3
+  beamer: ^1.4.0+1
 
 dev_dependencies:
   flutter_test:
